--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.1",
         "ext-PDO": "^7.1",
+        "ext-json": "^7.1",
         "aws/aws-sdk-php": "^3.145",
         "psr/cache": "^1.0",
         "psr/log": "^1.1"
