Alter composer.json so library can be installed on PHP 8

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.0",
         "aws/aws-sdk-php": "^3.145",
         "psr/cache": "^1.0",
         "psr/log": "^1.1"
